<resources>
    <string name="app_name">Instagram</string>
    <string name="facebook_app_id">344624867325664</string>
    <string name="fb_login_protocol_scheme">fb344624867325664</string>

    <!-- Sign In -->
    <string name="email">이메일을 입력해주세요</string>
    <string name="password">비밀번호를 입력해주세요</string>
    <string name="signIn_email">이메일 로그인</string>
    <string name="signUp_email">이메일 회원가입</string>
    <string name="signin_google">구글 로그인</string>
    <string name="signin_facebook">페이스북 로그인</string>

    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시글</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">프로필</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 회원님의 사진을 좋아합니다</string>
    <string name="alarm_comment">님이 메세지를 보냈습니다</string>
    <string name="alarm_follow">님이 회원님을 팔로우하기 시작했습니다</string>

    <!-- Comment -->
    <string name="send">댓글달기</string>

    <!-- Add Photo -->
    <string name="upload_image">사진 업로드</string>
    <string name="hint_image_content">이미지 설명</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>